snapshots/parsers/cst/deftype_statements/deftype_defbool.snap
---
source: src/parsers/cst/deftype_statements.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: DefTypeStatement
      children:
        - kind: DefBoolKeyword
          text: DefBool
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: B
        - kind: Newline
          text: "\n"
