snapshots/parsers/cst/deftype_statements/deftype_defdate.snap
---
source: src/parsers/cst/deftype_statements.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: DefTypeStatement
      children:
        - kind: DefDateKeyword
          text: DefDate
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: D
        - kind: Newline
          text: "\n"
