snapshots/parsers/cst/deftype_statements/deftype_defint_single_letter.snap
---
source: src/parsers/cst/deftype_statements.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: DefTypeStatement
      children:
        - kind: DefIntKeyword
          text: DefInt
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: I
        - kind: Newline
          text: "\n"
