snapshots/parsers/cst/deftype_statements/deftype_deflng_multiple_ranges.snap
---
source: src/parsers/cst/deftype_statements.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: DefTypeStatement
      children:
        - kind: DefLngKeyword
          text: DefLng
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: L
        - kind: Comma
          text: ","
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: M
        - kind: SubtractionOperator
          text: "-"
        - kind: Identifier
          text: N
        - kind: Newline
          text: "\n"
