snapshots/parsers/cst/deftype_statements/deftype_defobj_full_range.snap
---
source: src/parsers/cst/deftype_statements.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: DefTypeStatement
      children:
        - kind: DefObjKeyword
          text: DefObj
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: A
        - kind: SubtractionOperator
          text: "-"
        - kind: Identifier
          text: Z
        - kind: Newline
          text: "\n"
